# fpl-data

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: get_data.ipynb  load.ipynb  save_data.ipynb  transform.ipynb
src/: fpl_api.py
src/fpl_data/: api.py  load.py  utils.py
test/unit/: test_api.py  test_load.py  test_utils.py
