[build-system]
requires = [
    "setuptools>=67",
    "wheel",
    "tqdm==4.65.0",
    "requests"
]
build-backend = "setuptools.build_meta"

[project]
name = "fpl_data"
version = "0.0.1"
description = "Your package description"
url = "https://github.com/James-Leslie/fpl-data"

[project.authors]
your_name = { email = "contactJames-Leslie@gmail.com" }

[project.urls]
Documentation = "https://github.com/James-Leslie/fpl-data"
Code = "https://github.com/James-Leslie/fpl-data/src"
Issues = "https://github.com/James-Leslie/fpl-data/issues"
