[build-system]
requires = [
    "setuptools>=67",
    "wheel",
    "tqdm==4.65.0",
    "requests"
]
build-backend = "setuptools.build_meta"

[project]
name = "fpl_data"
version = "0.0.1"
description = "Your package description"
url = "https://github.com/James-Leslie/fpl-data"
authors = [
  { name="James Leslie", email="contactjamesleslie@gmail.com" },
]
